# qBittorrent

./: .gitignore  CMakeLists.txt  README.md  cmake.conf  vcpkg.json
src/app/: CMakeLists.txt  application.cpp  application.h  applicationinstancemanager.cpp  applicationinstancemanager.h  cmdoptions.cpp  cmdoptions.h  filelogger.cpp  filelogger.h  main.cpp  signalhandler.cpp  stacktrace.cpp  upgrade.cpp  upgrade.h
src/app/qtlocalpeer/: qtlocalpeer.cpp  qtlocalpeer.h  qtlockedfile.cpp  qtlockedfile.h  qtlockedfile_unix.cpp  qtlockedfile_win.cpp
src/base/: CMakeLists.txt  algorithm.h  digest32.h  global.h  logger.cpp  logger.h  path.cpp  path.h  profile.cpp  profile.h  tagset.cpp  tagset.h  trace.cpp  trace.h  types.h
src/base/bittorrent/: abstractfilestorage.cpp  abstractfilestorage.h  addtorrentparams.cpp  addtorrentparams.h  bandwidthscheduler.cpp  bandwidthscheduler.h  bencoderesumedatastorage.cpp  bencoderesumedatastorage.h  cachestatus.h  categoryoptions.cpp  categoryoptions.h  customstorage.cpp  customstorage.h  dbresumedatastorage.cpp  dbresumedatastorage.h  downloadpriority.cpp  downloadpriority.h  extensiondata.h  filesearcher.cpp  filesearcher.h  filterparserthread.cpp  filterparserthread.h  infohash.cpp  infohash.h  loadtorrentparams.h  ltqbitarray.cpp  ltqbitarray.h  lttypecast.h  magneturi.cpp  magneturi.h  nativesessionextension.cpp  nativesessionextension.h  nativetorrentextension.cpp  nativetorrentextension.h  peeraddress.cpp  peeraddress.h  peerinfo.cpp  peerinfo.h  portforwarderimpl.cpp  portforwarderimpl.h  (+22 more)
src/base/http/: connection.cpp  connection.h  httperror.cpp  httperror.h  irequesthandler.h  requestparser.h  (+8 more)
src/gui/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  addnewtorrentdialog.cpp  addnewtorrentdialog.h  addnewtorrentdialog.ui  addtorrentparamswidget.cpp  addtorrentparamswidget.h  addtorrentparamswidget.ui  advancedsettings.cpp  advancedsettings.h  autoexpandabledialog.cpp  autoexpandabledialog.h  autoexpandabledialog.ui  banlistoptionsdialog.cpp  banlistoptionsdialog.h  banlistoptionsdialog.ui  color.h  cookiesdialog.cpp  cookiesdialog.h  cookiesdialog.ui  cookiesmodel.cpp  cookiesmodel.h  deletionconfirmationdialog.cpp  deletionconfirmationdialog.h  deletionconfirmationdialog.ui  desktopintegration.cpp  desktopintegration.h  downloadfromurldialog.cpp  downloadfromurldialog.h  downloadfromurldialog.ui  executionlogwidget.cpp  executionlogwidget.h  executionlogwidget.ui  flowlayout.cpp  flowlayout.h  fspathedit.cpp  fspathedit.h  fspathedit_p.cpp  (+104 more)
(+156 files in other folders)
